style.css
/* Variables */
:root {
  --c-purple: #745eff;
  --c-purple-transparent: rgba(115, 94, 255, 0.4);
  --bg-color: #ffffff;
  --text-color: #202020;
  --c-grey: #949494;
}

[data-theme="dark"] {
  --text-color: #ffffff;
  --bg-color: #202020;
}

body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 100px 30px;
  font-size: 18px;
  background-color: var(--bg-color);
  color: var(--text-color);
  transition: color 0.3s ease, background-color 0.3s ease;
}

/* ul {
  list-style: none;
  padding: 0;
  margin: 0;
} */

/* li:not(:last-child) {
  margin-bottom: 20px;
} */

a {
  text-decoration: none;
  color: var(--c-grey);
  transition: color 0.3s ease;
}

a:hover {
  color: var(--text-color);
}

section:not(:last-child) {
  margin-bottom: 75px;
}

.visually-hidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(0 0 0 0);
}

/* Light/dark mode toggle */

.theme-toggle {
  position: relative;
}

.theme-toggle__label {
  font-size: 14px;
  cursor: pointer;
}

/* Table of Contents */

.title a {
  font-weight: 400;
  font-size: 16px;
  color: var(--c-purple);
  margin-bottom: 50px;
}

.toc {
  position: relative;
  width: 100%;
}

.toc ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.toc__item {
  padding: 5px 0;
  font-size: 16px;
  color: var(--c-grey);
}

.toc__item .selected {
  color: var(--text-color);
}

/* Essay Content */

.essay-content {
  width: 100%;
  max-width: 850px;
  line-height: 1.4;
}

.essay-content .heading {
  font-weight: 400;
}

.essay-content a {
  position: relative;
  display: inline-block;
}

.essay-content a::before {
  content: "";
  position: absolute;
  top: calc(-40%);
  left: calc(50% - 30px);
  width: 60px;
  height: 60px;
  border-radius: 50%;
  background-color: var(--c-purple-transparent);
  z-index: -100;
  transform: scale(0);
}

.essay-content a:hover::before {
  /* animation: grow-circle 0.5s forwards; */
  transform: scale(1);
  transition: transform 0.3s ease;
}

.essay__img {
  width: 100%;
}

.essay__img-caption {
  font-size: 14px;
}

.essay__img-caption a::before {
  width: 0;
  height: 0;
}

.introduction__hook {
  font-size: 42px;
  font-weight: 500;
}

.web-developers__list-item:not(:last-child) {
  margin-bottom: 20px;
}

.web-developers__li-heading {
  border-bottom: 2px var(--c-purple) solid;
}

.about__heading {
  font-weight: 400;
}

.about__heading::before {
  content: "";
  display: block;
  margin: 0 auto 75px auto;
  width: 200px;
  height: 2px;
  background-color: var(--text-color);
}

/* Desktop */

@media (min-width: 768px) {
  body {
    margin: 100px 50px;
    font-size: 24px;
  }

  .theme-toggle {
    position: fixed;
  }

  .title a {
    font-size: 18px;
  }

  .toc {
    position: fixed;
    top: 50vh;
    transform: translateY(-50%);
    width: 30%;
  }

  .toc__item {
    font-size: 18px;
  }

  .essay-content {
    width: 60%;
    margin-left: 35%;
  }

  .essay__img-caption {
    font-size: 18px;
  }

  .introduction__hook {
    font-size: 48px;
  }
}

